# Authentication_Application_React_FastApi_Docker

./: README.md  main.py  pyproject.toml  requirements.txt
app/core/: database.py
app/db/models/: message.py  user.py
backend/: .gitignore  database.db  main.py  pyproject.toml  requirements.txt
backend/app/db/repository/: messageRepository.py
backend/app/db/schemas/: message.py
backend/app/router/: auth.py  message.py
backend/app/services/: messageService.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: ChatBox.jsx  Login.jsx
